minor README updates

--- a/README.html
+++ b/README.html
@@ -352,8 +352,8 @@ display: none;
 </div>
 
 
-<div id="scripts-for-analyzing-phylotranscriptomic-data" class="section level2">
-<h2>Scripts for analyzing phylotranscriptomic data</h2>
+<div id="scripts-for-analyzing-diatom-phylotranscriptomic-dataset" class="section level2">
+<h2>Scripts for analyzing diatom phylotranscriptomic dataset</h2>
 <div id="data-qc" class="section level3">
 <h3>Data QC</h3>
 <p><code>compare_md5sum.pl</code>: compares two files with pre- and
