updated README files

--- a/README.html
+++ b/README.html
@@ -425,6 +425,8 @@ file includes specified outgroup taxa</p>
 <p><code>clean_trinity_fasta_header.pl</code>: remove special
 characters, etc. from Trinity FASTA headers</p>
 <p><code>count_ortholog_types.py</code></p>
+<p><code>extract_busco_summary_from_batch_outfile.py</code>: extract key
+values from batch BUSCO output into a csv file for plotting in R</p>
 <p><code>link_to_orthogroups_by_taxon_occupancy.py</code></p>
 <p><code>standardize_fasta_headers_and_filenames.pl</code>: standardize
 FASTA headers among different output files</p>
