updated to include MiSSE R scripts

--- a/README.html
+++ b/README.html
@@ -357,12 +357,17 @@ display: none;
 <div id="r-scripts" class="section level3">
 <h3>R scripts</h3>
 <ul>
-<li><p><code>R-scripts/check-monophyly.R</code>: check gene trees for
-monophyly of Thalassiosirales and raphid pennates</p></li>
-<li><p><code>R-scripts/plot-busco-omark.R</code>: plot BUSCO and OMArk
+<li><p><code>check-monophyly.R</code>: check gene trees for monophyly of
+Thalassiosirales and raphid pennates</p></li>
+<li><p><code>Densi.mod.R</code>: implementation of DensiTree-style
+function to draw a cloud of diversification histories across a set of
+phylogenetic trees</p></li>
+<li><p><code>Part2_plotMultiMisse.R</code>: plot the DensiTree-style
+results</p></li>
+<li><p><code>plot-busco-omark.R</code>: plot BUSCO and OMArk
 completeness</p></li>
-<li><p><code>R-scripts/trees-ordination-and-consensus.R</code>: NMDS
-ordination of species trees</p></li>
+<li><p><code>trees-ordination-and-consensus.R</code>: NMDS ordination of
+species trees</p></li>
 </ul>
 </div>
 <div id="data-qc" class="section level3">
